--- a/POST.html
+++ b/POST.html
@@ -8,7 +8,14 @@
     <link rel="stylesheet" href="css/esitilos.css">
 </head>
 <body>
-    <H2>ADIOS MUNDO</H2>
-    <P>ESTE PARRAFO ES EL DEL INCIO</P>
+    <div id="container">
+        <div id="cabecera">
+        Cabecera
+        </div>
+        <div id="post">
+        <h1>Este es el título atractivo e interesante del post</h1>
+        <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increéibles que se pueden hacer con ramas</p>
+        </div>
+        </div>
 </body>
 </html>
