Finalizada la cabecera con diseño azul

--- a/POST.html
+++ b/POST.html
@@ -18,8 +18,10 @@
         </div>
     </div>
 
-    <div>
-        Parte de abajo
+    <div id="container">
+        <div id="cabecera">
+            Parte de abajo
+        </div>
     </div>
 </body>
 </html>
