--- a/POST.html
+++ b/POST.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EL TITULO BIEN BONITO</title>
+    <title>EL TITULO BIEN BONITO DESDE GITHUB</title>
     <link rel="stylesheet" href="css/esitilos.css">
 </head>
 <body>
