commit al master desde su version mas reciente

--- a/EjemploGit.html
+++ b/EjemploGit.html
@@ -8,6 +8,15 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <h1>Mi pagina para entrenar GIT</h1>
+    <div id="container">
+        <div id="cabecera">
+             Cabecera
+        </div>
+        <div id="post">
+            <h1>Este es el título atractivo e interesante del post</h1>
+            <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increéibles que se pueden hacer con ramas</p>
+            <footer>Es un pie feooo</footer>
+        </div>
+    </div>
 </body>
 </html>
