--- a/EjemploGit.html
+++ b/EjemploGit.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
+    <div>CABECERA</div>
     <div id="container">
         <div id="cabecera">
              Cabecera
