--- a/EjemploGit.html
+++ b/EjemploGit.html
@@ -15,6 +15,7 @@
         <div id="post">
             <h1>Este es el título atractivo e interesante del post</h1>
             <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increéibles que se pueden hacer con ramas</p>
+            <p>Ahora este parrafo solo aparece en la rama Master</p>
             <footer>Es un pie feooo</footer>
         </div>
     </div>
