--- a/EjemploGit.html
+++ b/EjemploGit.html
@@ -12,12 +12,13 @@
     <div id="container">
         <div id="cabecera">
              Cabecera
-             <span id="tagline">Tu blog de cabecera</span>
+             <span id="tagline">Tu blog de Master</span>
         </div>
         <div id="post">
             <h1>Este es el título atractivo e interesante del post</h1>
             <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increéibles que se pueden hacer con ramas</p>
             <p>Ahora este parrafo solo aparece en la rama Master</p>
+            <h4>ES UN H4</h4>
             <footer>Es un pie feooo</footer>
         </div>
     </div>
