Agregamos otro div

--- a/EjemploGit.html
+++ b/EjemploGit.html
@@ -22,5 +22,18 @@
             <footer>Es un pie feooo</footer>
         </div>
     </div>
+
+    <div id="container">
+        <div id="cabecera">
+             <span id="tagline">Tu blog de Main ya conectado a GitHub</span>
+        </div>
+        <div id="post">
+            <h1>Este es el título atractivo e interesante del post</h1>
+            <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increéibles que se pueden hacer con ramas</p>
+            <p>Ahora este parrafo solo aparece en la rama Master</p>
+            <h6>H6 en cabecera</h6>
+            <footer>Es un pie feooo</footer>
+        </div>
+    </div>
 </body>
 </html>
