Nuevo logo y pequeños cambios

--- a/EjemploGit.html
+++ b/EjemploGit.html
@@ -13,6 +13,7 @@
         <div id="cabecera">
              Cabecera
              <span id="tagline">Tu blog de Master</span>
+             <img src="./branch-828603f1-e475-4690-8a7e-95178d1a4db2.webp" alt="" id="logo">
         </div>
         <div id="post">
             <h1>Este es el título atractivo e interesante del post</h1>
