--- a/EjemploGit.html
+++ b/EjemploGit.html
@@ -30,8 +30,8 @@
         </div>
         <div id="post">
             <h1>Este es el título atractivo e interesante del post</h1>
-            <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increéibles que se pueden hacer con ramas</p>
-            <p>Ahora este parrafo solo aparece en la rama Master</p>
+            <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increibles que se pueden hacer con ramas</p>
+            <p>Ahora este parrafo solo aparece en la rama master</p>
             <h6>H6 en cabecera</h6>
             <footer>Es un pie feooo</footer>
         </div>
